# vulkan-lib

./: .gitignore  Cargo.toml  flake.nix
app/: Cargo.toml  OFL.txt  build.rs  connect_prt.sh  manifest.yaml  ref.html  run_android.sh  run_android_prod.sh  run_oculus.sh
app-lib/: Cargo.toml
app-lib/src/: lib.rs
app/shaders/: solid.frag  solid.vert
app/src/: android.rs  app.rs  component.rs  layout.rs  lib.rs  main.rs  render.rs  resources.rs  util.rs
app/src/layout/: calculator.rs  mod.rs
app/src/layout/calculator/: mod.rs
app/src/layout/calculator/components/: element_sizes.rs  elements.rs  font.rs  image.rs  mod.rs  text.rs
app/src/layout/calculator/elements/: box_el.rs  col.rs  img.rs  mod.rs  row.rs  stack.rs  text.rs
app/src/render/: frame_counter.rs  mod.rs
platform-lib/: Cargo.toml  build.rs
platform-lib/examples/: basic.rs
platform-lib/src/: lib.rs
platform-lib/src/platform/: mod.rs
platform-lib/src/platform/wayland/: mod.rs
platform-lib/src/platform/wayland/window/: mod.rs
platform-lib/src/platform/windows/: message.rs  mod.rs  types.rs
platform-lib/src/platform/windows/window/: mod.rs
render-macro/: Cargo.toml
render-macro/src/: define_layout.rs  lib.rs
ui-macro/: Cargo.toml
ui-macro/src/: attribute_enum.rs  lib.rs
vulkan-lib/: Cargo.toml
vulkan-lib/src/: android.rs  descriptor_sets.rs  instance.rs  lib.rs  pipeline.rs  render_pass.rs  resources.rs  runtime.rs  swapchain_wrapper.rs
vulkan-lib/src/extensions/: calibrated_timestamps.rs  low_latency2.rs  mod.rs  present_timing.rs
vulkan-lib/src/queue/: command_buffers.rs  memory_manager.rs  mod.rs  queue_local.rs  recording.rs  semaphores.rs  shared.rs
vulkan-lib/src/resources/: buffer.rs  descriptor_pool.rs  descriptor_set.rs  image.rs  mod.rs  pipeline.rs  render_pass.rs  sampler.rs  staging_buffer.rs
vulkan-lib/src/runtime/: buffers.rs  command_buffers.rs  images.rs  memory_manager.rs  mod.rs  pipeline.rs  recording.rs  resources.rs  semaphores.rs  shared.rs
vulkan-lib/src/runtime/resources/: buffers.rs  descriptor_pool.rs  descriptor_sets.rs  images.rs  pipeline.rs  render_pass.rs  sampler.rs
vulkan-lib/src/shaders/: layout.rs  mod.rs
vulkan-lib/src/util/: image.rs  mod.rs
vulkan-lib/src/wrappers/: capabilities_checker.rs  debug_report.rs  device.rs  image.rs  mod.rs  surface.rs  timestamp_pool.rs
winwin32/: Cargo.toml
winwin32/examples/: basic.rs
winwin32/src/: lib.rs
winwin32/src/window/: mod.rs
