[package]
name = "app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type=["cdylib", "rlib"]

[dependencies]
log = "0.4.28"
simple_logger = "5.1.0"


winit = { version="0.30.12", features=["android-native-activity"] }

# android
jni = "0.21.1"
ndk-sys = { version = "0.6.0", optional = true }
ndk = { version = "0.9.0", optional = true }
android_logger = { version = "0.15.0", optional = true }

anyhow = "1.0.100"
image = "0.25.8"
raw-window-handle = "0.6.2"
sparkles = {version = "0.2.0", git = "https://github.com/skibon02/sparkles.git", branch = "main"}
vulkan-lib = {path = "../vulkan-lib"}
render-macro = {path = "../render-macro"}
ui-macro = {path = "../ui-macro"}
smallvec = "1.15.1"
lazy_static = "1.5.0"
rand = "0.9.2"
rayon = "1.10"
swash = { version = "0.2.6", features = ["scale"] }
thiserror = "2.0.18"

[features]
default = ["vulkan-lib/validation"]
android = ["vulkan-lib/android", "dep:ndk-sys", "dep:ndk", "dep:android_logger"]
