[package]
name = "app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type=["cdylib", "rlib"]

[dependencies]
log = "0.4.28"
simple_logger = "5.1.0"


winit = { version="0.31.0-beta.2", features=["android-native-activity"] }

# android
jni = "0.22.4"
ndk-sys = { version = "0.6.0", optional = true }
ndk = { version = "0.9.0", optional = true }
android_logger = { version = "0.15.0", optional = true }

anyhow = "1.0.100"
image = "0.25.8"
raw-window-handle = "0.6.2"
sparkles = {version = "0.2.0", git = "https://github.com/skibon02/sparkles.git", branch = "main"}
vulkan-lib = {path = "../vulkan-lib"}
render-macro = {path = "../render-macro"}
ui-macro = {path = "../ui-macro"}
smallvec = "1.15.1"
lazy_static = "1.5.0"
swash = { version = "0.2.6", features = ["scale"] }
thiserror = "2.0.18"

[package.metadata.android]
package = "com.skygrel19.vulkan_lib"
assets = "assets"
runtime_libs = "android/lib"

[package.metadata.android.sdk]
min_sdk_version = 24
target_sdk_version = 33

[package.metadata.android.application.activity]
config_changes = "orientation|keyboardHidden|screenSize|screenLayout|smallestScreenSize|density"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[package.metadata.android.signing.release]
path = "debug.keystore"
keystore_password = "android"

[features]
default = ["validation"]
validation = ["vulkan-lib/validation"]
validation-verbose = ["vulkan-lib/validation-verbose"]
android = ["vulkan-lib/android", "dep:ndk-sys", "dep:ndk", "dep:android_logger"]
sync-swapchain-recreate = ["vulkan-lib/sync-swapchain-recreate"]
present-timing = ["vulkan-lib/present-timing"]

