[package]
name = "platform-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
drop_guard = "0.3.0"
log = "0.4.29"
sparkles = { git="https://github.com/skibon02/sparkles.git", branch = "main", default-features = false }

# WINDOWS platform
[target.'cfg(target_os="windows")'.dependencies]
unicode-segmentation = { version = "1.13.2" }
windows-sys = { version = "0.61.2", features = [
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Media",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Accessibility",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Input_Touch",
    "Win32_UI_Shell",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
simple_logger = "5.2.0"
sparkles = { git="https://github.com/skibon02/sparkles.git", branch = "main" }

[build-dependencies]
cfg_aliases = "0.2.1"

[features]
default = ["only_wayland"]
only_x11 = []
only_wayland = []