[package]
name = "vulkan-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
thiserror = "2.0.17"
sparkles = {version = "0.2.0", git = "https://github.com/skibon02/sparkles.git", branch = "main"}
log = "0.4.28"
raw-window-handle = { version = "0.6.2", features = ["std", "alloc"] }
image = "0.25.8"
slotmap = "1.0.7"
parking_lot = "0.12.5"
smallvec = "1.15.1"
strum = { version = "0.27.2", features = ["derive"] }

[features]
default = []
validation = []
recording-logs = []
