[package]
name = "vulkan-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
# android
jni = { version = "0.21.1", optional = true }
ndk-sys = { version = "0.6.0", optional = true }
ndk = { version = "0.9.0", optional = true }

anyhow = "1.0.100"
ash = { version = "0.38.0", features = ["loaded"] }
ash-window = "0.13.0"
sparkles = {version = "0.2.0", git = "https://github.com/skibon02/sparkles.git", branch = "main"}
log = "0.4.28"
raw-window-handle = { version = "0.6.2", features = ["std", "alloc"] }
slotmap = "1.0.7"
parking_lot = "0.12.5"
smallvec = "1.15.1"
strum = { version = "0.27.2", features = ["derive"] }

[features]
default = []
android = ["dep:ndk-sys", "dep:ndk", "dep:jni"]
validation = []
recording-logs = []
